Add more resources
